	* arch/arm/src/sam34/sam_emac.c:  Fix EMAC pin configuration (was been
	  set up for RMII instead of MII).  Now the driver EMAC appears to be
	  functional (2014-3-13).
	* configs/sam4e-ek/nsh:  Networking support is now enabled by default
	  in the NSH configuration (2014-3-13).
	* arch/arm/src/sam34/sam_spi.c:  Backported the SAMA5 SPI driver to
	  the SAM3/4 architecture.  The SAMA5 version supports both multiple
	  SPI peripherals as needed by the SAM3A and SAM3X and also supports
	  DMAC (but not PDC).  The initial commit is untested and may very
	  well have (temporarily) broken SPI for the SAM3/4/ family (2014-3-13).
	* configs/sam4e-ek/src/sam_at25.c and sam_hsmci.c:  Added support for
	  the AT25 serial FLASH.  Restructured the logic that registers the
	  HSMCI block driver (2014-3-13).
	* arch/arm/src/sam34/sam_dmac.c and sam_spi.c:  Fixes to DMA in general
	  and to SPI in particular (2014-3-14).
	* configs/sam4e-ek/nsh:  DMA-based SPI and a FAT file system on the
	  AT25 Serial FLASH are now supported by default in the NSH configuration
	  (2014-3-14).
	* sched/nanosleep.c:  Fix a missing call to re-enable interrupts.  From
	  Jason Jiang (2014-3-15).

7.2 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/sam34/sam_udp.c and .h:  Add a USB full speed device
	  driver (UDP) for the SAM4E (2014-3-17).
	* Documentation/NuttxPortingGuide.html:  Typo fixes from Vijay Kumar
	  (2014-3-18).
	* arch/arm/Kconfig:  Improved documentation of the use of the
	  BASEPRI register from Vijay Kumar (2014-3-19).
	* include/nuttx/i2c.h:  More typo fixes from Vijay Kumar (2014-3-19).
	* arch/Kconfig and *_assert.h:  Add a configuration option to enable
	  dumping of the USB trace buffer on assertion (2014-3-19).
	* drivers/usbdev/Kconfig, arch/arm/src/sam34/Kconfig, and
	  drivers/usbdev/usbmsc_scsi.c:  If DCD can support queuing of stall
	  requests, then the USB MSC stall work around delays are not necessary
	  (2014-3-20).
